working on fixing navbar items, kind of went down a hole with positioning and z-index  ... :S

--- a/mod-picker/app/assets/stylesheets/main/header.scss
+++ b/mod-picker/app/assets/stylesheets/main/header.scss
@@ -78,20 +78,23 @@ nav {
   .primary-nav {
     .nav-item {
       border-left: 1px solid $bar_highlight_color;
-      height: 60px;
-      padding: 12px 12px 16px;
-      color: $bar_text_color;
       background-color: $bar_color;
-      display: block;
       float: left;
       position: relative;
-      z-index: 99;
       @include transition(background-color 0.2s ease-in-out);
 
       &:hover, &:focus {
-        outline: none;
-        color: $bar_text_color;
         background-color: $bar_highlight_color;
+        outline: none;
+      }
+
+      .nav-link {
+        display: block;
+        position: relative;
+        z-index: 99;
+        height: 60px;
+        padding: 12px 12px 16px;
+        color: $bar_text_color;
       }
 
       &:last-child {
@@ -103,6 +106,7 @@ nav {
       display: block;
       white-space: normal;
       position: absolute;
+      left: 0;
       text-align: center;
       z-index: 2;
       top: 60px;
@@ -141,17 +145,11 @@ nav {
       }
     }
 
-    #mod-lists-dropdown {
-      left: 270px;
-    }
-
     #mods-dropdown {
-      left: 338px;
       width: 502px;
     }
 
     #contributions-dropdown {
-      left: 155px;
       width: 182px;
 
       a {
